--- a/src/MEGASync/gui/ui/PermissionsDialog.ui
+++ b/src/MEGASync/gui/ui/PermissionsDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>500</width>
-    <height>551</height>
+    <width>524</width>
+    <height>616</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -46,16 +46,16 @@ background-color: #FFFFFF; /*colorToken.page-background*/
     <number>24</number>
    </property>
    <property name="leftMargin">
-    <number>20</number>
+    <number>48</number>
    </property>
    <property name="topMargin">
-    <number>20</number>
+    <number>48</number>
    </property>
    <property name="rightMargin">
-    <number>20</number>
+    <number>48</number>
    </property>
    <property name="bottomMargin">
-    <number>10</number>
+    <number>48</number>
    </property>
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -347,7 +347,7 @@ background-color: #FFFFFF; /*colorToken.page-background*/
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <property name="spacing">
-      <number>8</number>
+      <number>12</number>
      </property>
      <item>
       <spacer name="horizontalSpacer">
@@ -386,7 +386,7 @@ background-color: #FFFFFF; /*colorToken.page-background*/
         <string notr="true">outline</string>
        </property>
        <property name="dimension" stdset="0">
-        <string notr="true">small</string>
+        <string notr="true">medium</string>
        </property>
       </widget>
      </item>
@@ -417,7 +417,7 @@ background-color: #FFFFFF; /*colorToken.page-background*/
         <string notr="true">primary</string>
        </property>
        <property name="dimension" stdset="0">
-        <string notr="true">small</string>
+        <string notr="true">medium</string>
        </property>
       </widget>
      </item>
