--- a/src/MEGASync/gui/ui/PasteMegaLinksDialog.ui
+++ b/src/MEGASync/gui/ui/PasteMegaLinksDialog.ui
@@ -177,7 +177,7 @@ color: #303233; /*colorToken.color-text-primary*/
          <string notr="true">secondary</string>
         </property>
         <property name="dimension" stdset="0">
-         <string notr="true">small</string>
+         <string notr="true">medium</string>
         </property>
        </widget>
       </item>
@@ -208,7 +208,7 @@ color: #303233; /*colorToken.color-text-primary*/
          <string notr="true">primary</string>
         </property>
         <property name="dimension" stdset="0">
-         <string notr="true">small</string>
+         <string notr="true">medium</string>
         </property>
        </widget>
       </item>
