SNC-6006. Fix bottom on bugreport dialog.

--- a/src/MEGASync/gui/ui/BugReportDialog.ui
+++ b/src/MEGASync/gui/ui/BugReportDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>558</width>
-    <height>572</height>
+    <height>459</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -242,6 +242,21 @@ padding-right: 0px;
    <item>
     <widget class="QWidget" name="wButtons" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="spacing">
+       <number>8</number>
+      </property>
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
