Fixed minor errors

--- a/src/MEGASync/transfers/gui/ui/MediaTypeFilterWidget.ui
+++ b/src/MEGASync/transfers/gui/ui/MediaTypeFilterWidget.ui
@@ -52,7 +52,7 @@ QGroupBox
     <number>0</number>
    </property>
    <property name="bottomMargin">
-    <number>8</number>
+    <number>0</number>
    </property>
    <item>
     <widget class="QWidget" name="titleContainer" native="true">
@@ -68,6 +68,9 @@ QGroupBox
       </property>
       <property name="leftMargin">
        <number>10</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
       </property>
       <property name="rightMargin">
        <number>5</number>
