--- a/src/MEGASync/transfers/gui/ui/TransferManagerDelegateWidget.ui
+++ b/src/MEGASync/transfers/gui/ui/TransferManagerDelegateWidget.ui
@@ -339,7 +339,7 @@ QProgressBar
                 <string notr="true"/>
                </property>
                <property name="icon">
-                <iconset resource="../../../gui/Resources_light.qrc">
+                <iconset>
                  <normaloff>:/sync-01.svg</normaloff>:/sync-01.svg</iconset>
                </property>
                <property name="normal_off" stdset="0">
@@ -1107,29 +1107,17 @@ QProgressBar
          </property>
         </widget>
        </item>
-       <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
-        <widget class="QWidget" name="wPauseResume" native="true">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
+       <item>
+        <widget class="QWidget" name="wActionButtonsContainer" native="true">
          <property name="minimumSize">
           <size>
-           <width>16</width>
-           <height>63</height>
+           <width>0</width>
+           <height>0</height>
           </size>
          </property>
-         <property name="maximumSize">
-          <size>
-           <width>16</width>
-           <height>63</height>
-          </size>
-         </property>
-         <layout class="QHBoxLayout" name="wPauseResumeLayout">
+         <layout class="QHBoxLayout" name="horizontalLayout_12">
           <property name="spacing">
-           <number>0</number>
+           <number>8</number>
           </property>
           <property name="leftMargin">
            <number>0</number>
@@ -1144,80 +1132,119 @@ QProgressBar
            <number>0</number>
           </property>
           <item>
-           <widget class="TokenizableToolButton" name="tPauseResumeTransfer">
+           <widget class="QWidget" name="wPauseResume" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="minimumSize">
              <size>
               <width>16</width>
-              <height>16</height>
+              <height>63</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>16</width>
-              <height>16</height>
+              <height>63</height>
              </size>
             </property>
-            <property name="type" stdset="0">
-             <string notr="true">ghost</string>
-            </property>
+            <layout class="QHBoxLayout" name="wPauseResumeLayout">
+             <property name="spacing">
+              <number>0</number>
+             </property>
+             <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <property name="topMargin">
+              <number>0</number>
+             </property>
+             <property name="rightMargin">
+              <number>0</number>
+             </property>
+             <property name="bottomMargin">
+              <number>0</number>
+             </property>
+             <item>
+              <widget class="TokenizableToolButton" name="tPauseResumeTransfer">
+               <property name="minimumSize">
+                <size>
+                 <width>16</width>
+                 <height>16</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>16</width>
+                 <height>16</height>
+                </size>
+               </property>
+               <property name="type" stdset="0">
+                <string notr="true">ghost</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </widget>
           </item>
-         </layout>
-        </widget>
-       </item>
-       <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
-        <widget class="QWidget" name="wClearCancel" native="true">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>16</width>
-           <height>63</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>16</width>
-           <height>63</height>
-          </size>
-         </property>
-         <layout class="QHBoxLayout" name="wClearCancelLayout">
-          <property name="spacing">
-           <number>0</number>
-          </property>
-          <property name="leftMargin">
-           <number>0</number>
-          </property>
-          <property name="topMargin">
-           <number>0</number>
-          </property>
-          <property name="rightMargin">
-           <number>0</number>
-          </property>
-          <property name="bottomMargin">
-           <number>0</number>
-          </property>
           <item>
-           <widget class="TokenizableToolButton" name="tCancelClearTransfer">
+           <widget class="QWidget" name="wClearCancel" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="minimumSize">
              <size>
               <width>16</width>
-              <height>16</height>
+              <height>63</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>16</width>
-              <height>16</height>
+              <height>63</height>
              </size>
             </property>
-            <property name="type" stdset="0">
-             <string notr="true">ghost</string>
-            </property>
+            <layout class="QHBoxLayout" name="wClearCancelLayout">
+             <property name="spacing">
+              <number>0</number>
+             </property>
+             <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <property name="topMargin">
+              <number>0</number>
+             </property>
+             <property name="rightMargin">
+              <number>0</number>
+             </property>
+             <property name="bottomMargin">
+              <number>0</number>
+             </property>
+             <item>
+              <widget class="TokenizableToolButton" name="tCancelClearTransfer">
+               <property name="minimumSize">
+                <size>
+                 <width>16</width>
+                 <height>16</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>16</width>
+                 <height>16</height>
+                </size>
+               </property>
+               <property name="type" stdset="0">
+                <string notr="true">ghost</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </widget>
           </item>
          </layout>
@@ -1231,6 +1258,11 @@ QProgressBar
  </widget>
  <customwidgets>
   <customwidget>
+   <class>TokenizableToolButton</class>
+   <extends>QToolButton</extends>
+   <header>tokenizer/TokenizableItems/TokenizableButtons.h </header>
+  </customwidget>
+  <customwidget>
    <class>IconLabel</class>
    <extends>QToolButton</extends>
    <header>tokenizer/TokenizableItems/IconLabel.h</header>
@@ -1240,14 +1272,7 @@ QProgressBar
    <extends>QPushButton</extends>
    <header>tokenizer/TokenizableItems/TokenizableButtons.h</header>
   </customwidget>
-  <customwidget>
-   <class>TokenizableToolButton</class>
-   <extends>QToolButton</extends>
-   <header>tokenizer/TokenizableItems/TokenizableButtons.h </header>
-  </customwidget>
  </customwidgets>
- <resources>
-  <include location="../../../gui/Resources_light.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
