--- a/src/MEGASync/gui/Resources_common.qrc
+++ b/src/MEGASync/gui/Resources_common.qrc
@@ -1285,5 +1285,8 @@
         <file alias="upload-to-mega@3x.png">images/upload-to-mega@3x.png</file>
         <file alias="arrow-down-circle_small_regular_outline">images/themed/tokenizable/arrow-down-circle_small_regular_outline.svg</file>
         <file alias="arrow-up-circle_small_regular_outline">images/themed/tokenizable/arrow-up-circle_small_regular_outline.svg</file>
+        <file alias="folder-plus-02_medium_thin_outline">images/themed/tokenizable/folder-plus-02_medium_thin_outline.svg</file>
+        <file alias="arrow-up_medium_thin_outline">images/themed/tokenizable/arrow-up_medium_thin_outline.svg</file>
+        <file alias="arrow-up_small_thin_outline">images/themed/tokenizable/arrow-up_small_thin_outline.svg</file>
     </qresource>
 </RCC>
