--- a/src/MEGASync/gui/Resources_light.qrc
+++ b/src/MEGASync/gui/Resources_light.qrc
@@ -194,5 +194,6 @@
         <file alias="play_small_thin_outline_button_outline_hover">images/themed/light/play_small_thin_outline_button_outline_hover.svg</file>
         <file alias="info_small_thin_outline_text_info">images/themed/light/info_small_thin_outline_text_info.svg</file>
         <file alias="x_circle_small_thin_outline_text_error">images/themed/light/x_circle_small_thin_outline_text_error.svg</file>
+        <file alias="folder_small_thin">images/themed/light/folder_small_thin_outline.svg</file>
     </qresource>
 </RCC>
